--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "ioredis": "^5.0.4",
     "next": "12.1.6",
     "pino": "^7.11.0",
